objects/copado__Project__c.object
<CustomObject>
    <description>Overall object for capturing the project details.</description>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_Tabs_from_Promotion_Page__c</fullName>
        <label>Exclude Tabs from Promotion Page</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Static Code Analysis Summary</fullName>
                </value>
                <value>
                    <fullName>Selenium Test</fullName>
                </value>
                <value>
                    <fullName>Promotion User Story Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Index_Metadata__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When this field is checked, Copado will index the metadata selected against the user stories into the User Story Metadata custom object. Indexed metadata can be used for reporting and compliance, and it&apos;s also used by Copado overlap awareness feature.</inlineHelpText>
        <label>Index Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copadoccmint__Copado_Integration_Setting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Copado Integration Setting</label>
        <referenceTo>copadoccmint__Copado_Integration_Setting__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Enable_Community_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable to sync User Stories assigned to community users.</inlineHelpText>
        <label>Enable Community Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Enable_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you are fetching more then 500 records from the third party platform, we recommend you to disable this checkbox to be able to prevent heap size too large issue.</inlineHelpText>
        <label>Enable Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadoccmint__JQL_Extended_Filter__c</fullName>
        <inlineHelpText>If you want to add an additional filter to your JIRA callout, you can just modify this field.
Usage exp: issueType=Story and resolution=Duplicate</inlineHelpText>
        <label>JQL Extended Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Project_External_Id__c</fullName>
        <label>Project External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Sprint_Per_Batch_Chunk_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>If in case, you are getting too many callout issue due to more number of User Stories per Sprint or due to more number of sprint.
    You can reduce the batch size in this field.</inlineHelpText>
        <label>Sprint Per Batch Chunk Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Team_Info__c</fullName>
        <inlineHelpText>Comma separated Team Name/Id to fetch Team sprints. Exp: Frontend Team,Backend Team,QA Team</inlineHelpText>
        <label>Team Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Workspace_Id__c</fullName>
        <label>Workspace Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>APO_Projects</fullName>
        <columns>NAME</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__Deployment_Flow__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>copado__Index_Metadata__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>APO -</value>
        </filters>
        <label>APO Projects</label>
        <sharedTo>
            <group>APO_Release_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Active_Infrastructure_Projects</fullName>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__Project__c.IT_Operations</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Active Infrastructure Projects Kanban</label>
    </listViews>
    <listViews>
        <fullName>All_IT_Ops_Projects</fullName>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__Project__c.IT_Operations</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All IT Ops Projects</label>
        <sharedTo>
            <role>Director_IT_Ops</role>
            <role>IT_Ops_Team_Member</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_InfraOps_Projects</fullName>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__Project__c.IT_Operations</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All InfraOps Projects</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Director_IT_Ops</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Infra_Non_Support_Projects</fullName>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__Project__c.IT_Operations</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>support</value>
        </filters>
        <label>All Infra Non-Support Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Infra_Support_Projects</fullName>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__Project__c.IT_Operations</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>support</value>
        </filters>
        <label>All Infra Support Projects</label>
    </listViews>
    <listViews>
        <fullName>Canceled_IT_Ops_Projects</fullName>
        <booleanFilter>1 AND (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__Project__c.IT_Operations</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>CANCELED</value>
        </filters>
        <label>Canceled IT Ops Projects</label>
    </listViews>
    <listViews>
        <fullName>Copado_Work_Management_Project</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__Project__c.Copado_Work_Management_Project</value>
        </filters>
        <label>Copado Work Management Projects</label>
    </listViews>
    <listViews>
        <fullName>Dev_QA_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Deployment_Flow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>Draft,Planned,In progress</value>
        </filters>
        <label>Dev/QA Open Projects</label>
    </listViews>
    <listViews>
        <fullName>Enterprise_Data_Analytics</fullName>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>EDA |</value>
        </filters>
        <label>Enterprise Data &amp; Analytics</label>
    </listViews>
    <listViews>
        <fullName>My_IT_Ops_Projects</fullName>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__Project__c.IT_Operations</value>
        </filters>
        <label>My IT Ops Projects</label>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Deployment_Flow__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Copado_Work_Management_Project</fullName>
        <active>true</active>
        <label>Copado Work Management Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default Project Record Type based on Master</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Operations</fullName>
        <active>true</active>
        <description>Projects Exclusive to IT Operations</description>
        <label>IT Operations</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>